# coastalmodeling-vdatum

./: .gitignore  .pylintrc  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml  lint.yml  publish-to-pypi.yml  publish.yml  run-tests.yml
coastalmodeling-vdatum/: datum_conv.py  geoid_tr.py  path.py
coastalmodeling_vdatum/: _path.py  _version.py  path.py  utils.py  vdatum.py
docs/: index.md  installation.md  quick-start.md  vdatum.md
examples/: usage.ipynb
tests/: test_offline_vdatum.py  test_online_vdatum.py
