[metadata]
name = coastalmodeling-vdatum
description = NA
author = NA
license = NA
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    coastalmodeling-vdatum
install_requires =
    numpy==2.1.1
    pyproj==3.7.0
python_requires = >=3.11
package_dir =
zip_safe = no
