[metadata]
name = coastalmodeling_vdatum
description = Basic vertical datum conversion tool for OCS applications
author = Felicio Cassalho and Jack Riley
license = Creative Commons Zero v1.0 Universal
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    coastalmodeling_vdatum
install_requires =
    numpy>=1.26.4
    pyproj>=3.7.0
python_requires = >=3.11
package_dir =
zip_safe = no
